Added Assigned Technician column to issues_view.php.
Fixed bug where issues_assignProcess.php would send you no where.
Fixed and updated notifications along with adding new ones.
Change order of buttons in helpDesk_manageTechnicians.php and helpDesk_manageTechnicianGroups.php.
Added a Reincarnate Issue button and permission.
Fixed users not being able to see their own resolved issue if they were a technician and they could not see Resolved issues.
Added default privacy options for all issue (Privacy of specific issues coming soon!).

v0.4.10
-------
Changed default privacy of issue to Related (Note: The system default are set to Everyone).
Added a privacy drop down in issues_create.php.
Arrange sidebar links into categories
Added privacy setting to issue_discussView.php.
Added ability to change privacy setting by clicking on the privacy setting text in issue_disucssView.php.
Made the privacy setting affect multiple areas.
Made descriptions shorter and stripped the tags off in issues_view.php.

v0.4.20
-------
Implemented Logs into Help Desk.
Changed Category of Help Desk Settings to "Admin".
Changed Category of Manage Technicians to "Technician".
Changed Category of Manage Technician Groups to "Technician".
Added Statistics action.
Created helpDesk_statistics.php and helpDesk_technicianStats.php
Fixed a bug where the Issue Filter was not being used.
Added helpDesk_statisticsDetail.php.
Added the ability to only have one Technician Group show up in helpDesk_manageTechnicianGroup.php.
Changed text "No one" text in helpDesk_manageTechnicianGroup.php to "No one is currently in this group.".
Added the ability to highlight(in red) a post in issues_discussView.php.
Added Stats button in helpDesk_technicianID.php.
Added Technician Stats.

v1.0.00
-------
Fixed an issue with issues_createProcess.php.
Added Year Filter.
Added Default groups when first installed.

v1.0.01
-------
Fixed Default groups not being added when first installing.
Added Gibbon v10 Compatibility.