@@ -224,3 +224,5 @@ v1.0.01
 -------
 Fixed Default groups not being added when first installing.
 Added Gibbon v10 Compatibility.
+Fixed date not passing through in when creating an issue.
+Fixed %issueName% showing up in helpDesk_statisticsDetail.php.
